updated watch now link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <title>video landing page</title>
+    <title>Masquerade Archive</title>
 </head>
 <body>
     <section class="showcase">
@@ -16,7 +16,7 @@
         <div class="content">
             <h1>Masquerade Archive</h1>
             <h3>Explore different Masquerades of Ndigbo</h3>
-            <a href="https://www.youtube.com/@CultureTv-km7yy" class="btn">Watch Now</a>
+            <a href="https://web.facebook.com/IgboMasquerades" class="btn">Watch Now</a>
         </div>
     </section>
     <section id="about">
